Operator bl_translation_context attribute does nothing #79534

Closed
opened 2020-08-04 23:26:11 +02:00 by Mikhail Rachinskiy · 5 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 860M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.48

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-03 05:14, hash: 144f780c71

Short description of error
Operator bl_translation_context attribute does not change translation context.
Here is comparison between bl_translation_context and text_ctxt on the same operator.
operator_ctxt.png

Exact steps for others to reproduce the error

  • Open attached blend file.
  • Go to Preferences > Interface > Translation panel, and change Language property to either Spanish, French or Russian.

Run script.

In popup panel you will see that the same operator have different translations, that is because unlike text_ctxt, bl_translation_context does not change translation context.

operator_ctxt.blend

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 860M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.48 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-03 05:14, hash: `144f780c71` **Short description of error** Operator `bl_translation_context` attribute does not change translation context. Here is comparison between `bl_translation_context` and `text_ctxt` on the same operator. ![operator_ctxt.png](https://archive.blender.org/developer/F8745964/operator_ctxt.png) **Exact steps for others to reproduce the error** - Open attached blend file. - Go to Preferences > Interface > Translation panel, and change Language property to either Spanish, French or Russian. # Run script. In popup panel you will see that the same operator have different translations, that is because unlike `text_ctxt`, `bl_translation_context` does not change translation context. [operator_ctxt.blend](https://archive.blender.org/developer/F8745970/operator_ctxt.blend)
Author
Member

Added subscriber: @MikhailRachinskiy

Added subscriber: @MikhailRachinskiy

Added subscriber: @mano-wii

Added subscriber: @mano-wii

I can't test the operator on a Debug build because of this assertion:

assert(!"setting the bl_translation_context on a non-builtin operator");

It even looks like bl_translation_context was not meant to work.
It may be a bug, but I'm not familiar with this area.

I can't test the operator on a Debug build because of this assertion: ``` assert(!"setting the bl_translation_context on a non-builtin operator"); ``` It even looks like `bl_translation_context` was not meant to work. It may be a bug, but I'm not familiar with this area.

This issue was referenced by 69c551089b

This issue was referenced by 69c551089b7793bada65295c5dcb3f5028c2e233

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Campbell Barton self-assigned this 2020-09-15 10:09:20 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79534
No description provided.