Fix T79534: Python Operator.bl_translation_context ignored

The default value prevented it from being set on registration,
now only assign the default when the class doesn't define it.